"""
Graphql Schemadefinitie voor het Bemiddelingregister
Versie 0.9.1
Gebaseerd op ERD versie 230721
"""
scalar UUID @specifiedBy(url: "https://tools.ietf.org/html/rfc4122") # version 4
scalar Date
scalar DateTime @specifiedBy(url: "https://scalars.graphql.org/andimarek/date-time")

schema {
  query: Query
}

"de volgende bevragingen zijn er gedefinieerd"
type Query {
  # Haal alle bemiddelingen voor bsn
  getWlzBemiddelingenVoorBsn(bsn: String!): Client!
  # Haal WlzBemiddeling op voor BemiddelingID
  getWlzBemiddelingVoorBemiddelingID(bemiddelingID: UUID!): Bemiddeling!
  # Haal Contacten op voor bsn
  getContactVoorBsn(bsn: String!): [Contactpersoon!]
  # Haal WlzIndicatieID op voor een Instelling met bemiddeling voor verificatie
  
  # Generieke query voor het ophalen van Bemiddeling informatie
  getWlzBemiddeling(searchinput:WlzBemiddelingInput!): Bemiddeling!

  # Generieke query voor het ophalen van overdracht informatie
  getOverdrachtBemiddeling(searchinput: OverdrachtInput!): Overdracht!
}

"Objects"
type Client {
  clientID: UUID! #
  bsn: String!
  # partnerOpname: String! #COD260: Ja of nee 
  leefeenheid: String #COD478: Leefeenheid 
  huisarts: String
  communicatievorm: String #COD747: Communicatievorm 
  taal: String
  bemiddeling: [Bemiddeling!]!
  dossierhouder: [Dossierhouder]
  coordinatorZorgThuis: [CoordinatorZorgThuis]
  contactpersoon: [Contactpersoon]
  contactgegevens: [Contactgegevens]
}

type Bemiddeling {
  bemiddelingID: UUID!
  wlzIndicatieID: UUID!
  verantwoordelijkZorgkantoor: String! #COD001: Zorgkantoor 
  verantwoordelijkheidIngangsdatum: Date!
  verantwoordelijkheidEinddatum: Date
  zorgInNatura: [ZorgInNatura]
  pgb: [Pgb]
  overdracht: Overdracht
  client: Client!
}

interface ZorgToewijzing {
  zzpCode: String! #COD163: Zorgzwaartepakket 
  toewijzingIngangsdatum: Date!
  vaststellingmoment: DateTime!
  toewijzingEinddatum: Date
  percentage: Int!
}

type ZorgInNatura implements ZorgToewijzing {
  zorgInNaturaID: UUID!
  leveringsvorm: String! #COD578: Leveringsvorm 
  zzpCode: String! #COD163: Zorgzwaartepakket 
  toewijzingIngangsdatum: Date!
  instelling: String!
  uitvoerendZorgkantoor: String! #COD001: Zorgkantoor 
  vaststellingmoment: DateTime!
  toewijzingEinddatum: Date
  percentage: Int!
  opname: String #COD260: Ja of nee
  redenIntrekking: String #COD172: Reden intrekking
  etmalen: String #COD755: Etmalen
  instellingBestemming: String
  soortToewijzing: String! #COD165: Soort toewijzing
  bemiddeling: Bemiddeling!
  overdrachtspecificatie: Overdrachtspecificatie
}

type Pgb implements ZorgToewijzing {
  pgbID: UUID!
  zzpCode: String! #COD163: Zorgzwaartepakket
  toewijzingIngangsdatum: Date!
  uitvoerendZorgkantoor: String! #COD001: Zorgkantoor 
  vaststellingmoment: DateTime!
  toewijzingEinddatum: Date
  percentage: Int!
  soortToewijzing: String! #COD165: Soort toewijzing
  overdrachtspecificatie: Overdrachtspecificatie
}

interface Zorginstelling {
  instelling: String!
  ingangsdatum: Date!
  einddatum: Date
}

type Dossierhouder implements Zorginstelling {
  dossierhouderID: UUID!
  instelling: String!
  ingangsdatum: Date!
  einddatum: Date
  client: Client!
}

type CoordinatorZorgThuis implements Zorginstelling {
  coordinatorZorgThuisID: UUID!
  instelling: String!
  ingangsdatum: Date!
  einddatum: Date
  client: Client!
}

type Overdracht {
  overdrachtID: UUID!
  verantwoordelijkZorgkantoor: String! #COD001: Zorgkantoor
  overdrachtDatum: Date!
  verhuisDatum: Date!
  overdrachtspecificatie: [Overdrachtspecificatie]
  bemiddeling: Bemiddeling!
}

type Overdrachtspecificatie {
  overdrachtspecificatieID: UUID!
  leveringsstatus: String! #COD167: Leveringsstatus
  leveringsstatusClassificatie: String #COD168: LeveringsstatusClassificatie
  oorspronkelijkeToewijzingEinddatum: Date
  overdracht: Overdracht!
  zorgInNatura: ZorgInNatura
  pgb: Pgb
}

type Contactpersoon {
  contactpersoonID: UUID!
  relatieNummer: String!
  volgorde: Int
  soortRelatie: String! #COD472!: Soort relatie
  rol: String #COD1003: Rol
  relatie: String #COD1002: Relatie
  organisatienaam: String
  geslachtsnaam: String
  voorvoegselGeslachtsnaam: String
  partnernaam: String
  voorvoegselPartnernaam: String
  voornamen: String
  voorletters: String
  roepnaam: String
  naamgebruik: String #COD700: Naamgebruik
  geslacht: String #COD046: Geslacht
  geboortedatum: Date
  geboortedatumgebruik: String #COD170: Datumgebruik
  ingangsdatum: Date!
  einddatum: Date
  contactgegevens: Contactgegevens!
  client: Client!
}

type Contactgegevens {
  contactgegevensID: UUID!
  straatnaam: String
  huisnummer: Int
  huisletter: String
  huisnummertoevoeging: String
  aanduidingWoonadres: String #NUM061
  postcode: String
  plaatsnaam: String
  land: String #COD032
  adressoort: String! #COD757
  telefoonnummer01: String
  landnummer01: String
  telefoonnummer02: String
  landnummer02: String
  emailadres: String
  ingangsdatum: Date!
  einddatum: Date
}

# Searchinput
input WlzBemiddelingInput {
  filter: BemiddelingZoekfilters!
}

input BemiddelingZoekfilters {
  bemiddelingID: UUID
  zorgInNaturaID: UUID
  bsn: String
}

input OverdrachtInput {
  filter: OverdrachtZoekfilters!
}

input OverdrachtZoekfilters {
  overdrachtID: UUID
}